--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -8,7 +8,7 @@
 
 \input{tex/appendix_selection.tex}
 
-\chapter{Unfolding checks}
+\chapter{Unfolding details}
 \label{app:unfolding}
 
 \input{tex/appendix_unfolding.tex}
