minor fix (accents)

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -19,7 +19,7 @@ Doctorado en F\'isica\\
 \vspace{-5pt}
 Departamento de F\'isica,\\
 \vspace{-10pt}
-Universitat Autònoma de Barcelona\\
+Universitat Aut\`onoma de Barcelona\\
 \vspace{-10pt}
 y\\
 \vspace{-10pt}
@@ -34,7 +34,7 @@ Institut de F\'isica d'Altes Energies\\
 \vspace{40pt} \\
 
 \begin{large}
-\textbf{PhD dissertation}
+\textbf{Ph.D. dissertation}
 \par
 \vspace{2pt}
 \par
@@ -53,13 +53,13 @@ September 2014 \\
  & \large Director \\
  &\Large \bfseries Prof. Aurelio Juste Rozas\\
  &\large Instituci\'o Catalana de Recerca i Estudis Avan\c{c}ats\\
- &\large Institut de F\'isica d’Altes Energies\\
+ &\large Institut de F\'isica d'Altes Energies\\
  & \\
  & \\
  & \large Tutor \\
  &\Large \bfseries Prof. Jos\'e Mar\'ia Crespo\\
  &\large Universitat Aut\`onoma de Barcelona\\
- &\large Institut de F\'isica d’Altes Energies\\
+ &\large Institut de F\'isica d'Altes Energies\\
  & \\
  & \\
 \end{tabular}
