--- a/bib/introduction.bib
+++ b/bib/introduction.bib
@@ -106,3 +106,88 @@ year ={2014},
       reportNumber   = "CERN-EP-83-25",
       SLACcitation   = "%%CITATION = PHLTA,B122,476;%%",
 }
+
+@article{LHCb:2012fb,
+      author         = "Aaij, R and others",
+      title          = "{Measurement of the D+/- production asymmetry in 7 TeV pp
+                        collisions}",
+      collaboration  = "LHCb Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B718",
+      pages          = "902-909",
+      doi            = "10.1016/j.physletb.2012.11.038",
+      year           = "2013",
+      eprint         = "1210.4112",
+      archivePrefix  = "arXiv",
+      primaryClass   = "Unknown",
+      reportNumber   = "LHCB-PAPER-2012-026, CERN-PH-EP-2012-305",
+      SLACcitation   = "%%CITATION = ARXIV:1210.4112;%%",
+}
+
+@article{ALEPH:2005ab,
+      author         = "Schael, S. and others",
+      title          = "{Precision electroweak measurements on the $Z$
+                        resonance}",
+      collaboration  = "ALEPH Collaboration, DELPHI Collaboration, L3
+                        Collaboration, OPAL Collaboration, SLD Collaboration, LEP
+                        Electroweak Working Group, SLD Electroweak Group, SLD
+                        Heavy Flavour Group",
+      journal        = "Phys.Rept.",
+      volume         = "427",
+      pages          = "257-454",
+      doi            = "10.1016/j.physrep.2005.12.006",
+      year           = "2006",
+      eprint         = "hep-ex/0509008",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "SLAC-R-774",
+      SLACcitation   = "%%CITATION = HEP-EX/0509008;%%",
+}
+
+@article{Aad:2013cea,
+      author         = "Aad, Georges and others",
+      title          = "{Measurement of the top quark pair production charge
+                        asymmetry in proton-proton collisions at $\sqrt{s}$ = 7
+                        TeV using the ATLAS detector}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "JHEP",
+      volume         = "1402",
+      pages          = "107",
+      doi            = "10.1007/JHEP02(2014)107",
+      year           = "2014",
+      eprint         = "1311.6724",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-177",
+      SLACcitation   = "%%CITATION = ARXIV:1311.6724;%%",
+}
+
+@article{AguilarSaavedra:2011cp,
+      author         = "Aguilar-Saavedra, J.A. and Juste, A. and Rubbo, F.",
+      title          = "{Boosting the t tbar charge asymmetry}",
+      journal        = "Phys.Lett.",
+      volume         = "B707",
+      pages          = "92-98",
+      doi            = "10.1016/j.physletb.2011.12.007",
+      year           = "2012",
+      eprint         = "1109.3710",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1109.3710;%%",
+}
+
+@article{Aguilar-Saavedra:2014vta,
+      author         = "Aguilar-Saavedra, J.A. and \'Alvarez, E. and Juste, A. and
+                        Rubbo, F.",
+      title          = "{Shedding light on the $t \bar t$ asymmetry: the photon
+                        handle}",
+      journal        = "JHEP",
+      volume         = "1404",
+      pages          = "188",
+      doi            = "10.1007/JHEP04(2014)188",
+      year           = "2014",
+      eprint         = "1402.3598",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1402.3598;%%",
+}
