--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -3,97 +3,106 @@
 
 Asymmetry is the ``lack of equality or equivalence between parts or
 aspects of something''~\cite{oxforddict}.
-Symmetries are powerful tools in particle physics, because it has
-become evident that practically all laws of nature originates in
+Symmetries are powerful tools in particle physics because it has
+become evident that practically all laws of nature originate in
 symmetry. Therefore, violations of symmetry present theoretical
-puzzles leading to a deeper understanding of nature. From the
-experimental point of view, the measurement of asymmetries is
-virtually free from systematic uncertainties, and allow to distinguish
+puzzles whose resolution leads to a deeper understanding of Nature. 
+From the experimental point of view, the measurement of asymmetries is
+virtually free from systematic uncertainties and allow to distinguish
 small asymmetric signals from large symmetric backgrounds.
 In the recent history of particle physics, asymmetries have been
 exploited to investigate the nature of the weak interaction. 
 Due to the parity violation typical of the weak
 interaction, processes show differences between particles and
-antiparticles, or between left-handed or right-handed particles.
+antiparticles, or between left--handed or right--handed particles.
 Various asymmetries have been studied at collider experiments in the
 last thirty years:
 
 \begin{itemize}
-\item A {\it left-right asymmetry} is defined as $A_{LR}=(N_L -
-  N_R)/(N_L +N_R)$, where $N_L$ is the number of events with a
-  left-polarized particle, and $N_R$ the number of right-polarized
-  events. The left-right asymmetry in $Z$ boson production was
-  measured in 1992 at the Stanford Linear Collider of polarized and
-  unpolarized electron beams~\cite{Elia:1993ka}.
 \item A {\it charge asymmetry}  is defined as $A_{+-}=(N_+ -
   N_-)/(N_+ +N_-)$, where $N_+$ is the number of events with a
   positively charged particle, and $N_-$ the number of events with a
   negative particle. Charge asymmetries are used to measure CP
-  violation in $B$ meson decays.
+  violation in meson decays~\cite{LHCb:2012fb}.
+\item A {\it left-right asymmetry} is defined as $A_{LR}=(N_L -
+  N_R)/(N_L +N_R)$, where $N_L$ is the number of events with a
+  left--polarized particle and $N_R$ the number of right--polarized
+  events. The left-right asymmetry in $Z$ boson production was
+  measured in 1992 at the Stanford Linear Collider of polarized and
+  unpolarized electron beams~\cite{Elia:1993ka}.
 \item A {\it forward-backward asymmetry} is defined as $A_{FB}=(N_F -
   N_B)/(N_F +N_B)$, where $N_F$ is the number of events with a
   particle moving {\it forward} with respect to a chosen reference
-  direction, and $N_B$ the number of {\it backward} events.
+  direction, and $N_B$ the number of {\it backward} events. A notable
+  example is the forward--backward asymmetry in $bbbar$ production
+  measured at LEP~\cite{ALEPH:2005ab}.
 \end{itemize}
 
 The latter is the type of asymmetry more relevant for this
 dissertation. A famous example of forward-backward asymmetry is the
 measurement in $\mu^+\mu^-$ production in $e^+e^-$ annihilation by the
-TASSO collaboration~\cite{Braunschweig:1988fy}. The measurement,
+TASSO Collaboration~\cite{Braunschweig:1988fy}. The measurement,
 performed at center-of-mass energies between $35$ and $46.8\GeV{}$,
-showed how the asymmetry provides sensitivity to probe for physics at
-higher energy, beyond reach for direct observation. In the 
-specific case, Fig.~\ref{fig:tasso} shows that, while the inclusive
-cross section measurements agree with the symmetric $QED$ description,
-a forward--backward asymmetry is induced by the interference with a virtual
-$Z$ boson discovered at a mass of $\sim 91\GeV{}$ in
+showed how the asymmetry allows probing for new physics contributing at
+energy scales beyond direct reach. In this case, Fig.~\ref{fig:tasso}
+shows that, while the inclusive cross section measurements of
+$e^+e^-\to\mu^+\mu^-$ agree with the symmetric $QED$ description, a
+forward--backward asymmetry is induced by the interference with a
+virtual $Z$ boson discovered at a mass of $\sim 91\GeV{}$ in
 proton--antiproton collisions by the UA1 and UA2
-collaborations~\cite{Arnison:1983rp,Banner:1983jy}.
+Collaborations~\cite{Arnison:1983rp,Banner:1983jy}. 
 
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.495\textwidth]{figures/introduction/tasso_xs}
   \includegraphics[width=0.495\textwidth]{figures/introduction/tasso_diffxs}
   \caption{Inclusive cross section as a function of center-of-mass
     energy (left) and angular distribution of the muons (right) for
-    $\mu^+\mu^-$ production at $e^+e^-$ collisions~\cite{Braunschweig:1988fy}.}
+    $e^+e^-\to\mu^+\mu^-$ production, as measured by the TASSO
+    Collaboration~\cite{Braunschweig:1988fy}. The measured inclusive cross
+    section agrees with the QED prediction, shown with a solid line,
+    while the best fit of the angular distribution deviates from the
+    QED prediction, shown with a dashed line.} 
   \label{fig:tasso}
 \end{figure}
 
-An analogous asymmetry in top quark pair (\ttbar{}) production might provide a
+An analogous asymmetry in top quark pair (\ttbar{}) production might also provide a
 probe for new physics processes at scales beyond the current reach of direct
-searches. The CDF and \dzero{} collaborations reported an unexpectedly
+searches. The CDF and \dzero{} Collaborations reported an unexpectedly
 large forward--backward asymmetry in \ttbar{} production using
 proton--antiproton collisions at $\sqrt{s}=1.96\TeV{}$ at Fermilab's
 Tevatron collider~\cite{Abazov:2014cca,Aaltonen:2012it}. As shown in
 Fig.~\ref{fig:afbtev}, the asymmetry has a dependence on the \ttbar{}
 invariant mass (a proxy for the partonic center--of--mass energy) with
-a interesting hint of discrepancy with respect to the Standard Model
+an interesting hint of discrepancy with respect to the Standard Model (SM)
 prediction.
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.495\textwidth]{figures/introduction/afb_tevatron}
   \caption{Dependence of the forward--backward asymmetry measurements
     by the CDF and D0 Collaborations on the invariant mass of the
     \ttbar{} system. The horizontal error bars indicate the binning
-    used in each experiment. Also shown is the Standard Model
-    prediction.}
+    used in each experiment. The horizontal lines show the SM
+    prediction from simulation (solid line) and the theoretical
+    calculation (dashed line)~\cite{Bernreuther:2012sx}.}
   \label{fig:afbtev}
 \end{figure}
 With the end of Tevatron operations in 2011, no additional data will
 be collected. Therefore little room is left for improving the
-precision of the forward--backward asymmetry measurement at \ppbar{}
+precision of the forward--backward asymmetry measurement in \ppbar{}
 collisions, with the goal of clarifying the experimental status.
 However, complementary probes of the asymmetry in \ttbar{} production
-can be studied at $pp$ collisions, provided by the Large Hadron
-Collider at CERN.
+can be studied in $pp$ collisions, provided by the Large Hadron
+Collider (LHC) at CERN.
 
-This thesis work focus on the study of a central--forward asymmetry in
-\ttbar{} production at $pp$ collisions, also referred to as {\it
-  charge} asymmetry. This document is organized as follows:
+This thesis' work focus on the study of a central--forward asymmetry in
+\ttbar{} production, also referred to as {\it
+  charge} asymmetry, using $pp$ collisions data collected with the
+ATLAS detector at the LHC. This document is organized as follows:
 Chapter~\ref{sec:theory} gives an introduction to the Standard Model
 of particle physics, with a focus on the top quark phenomenology and
 the production asymmetry. Chapter~\ref{sec:experiment} describes the
-experimental setup of the ATLAS detector within the Large Hadron
-Collider accelerator facility. The simulation of the physics processed
+experimental setup of the ATLAS detector within the LHC accelerator
+facility. 
+The simulation of the physics processed
 used in the analysis is described in Chapter~\ref{sec:simulation},
 while the definition of the physics objects follows in
 Chapter~\ref{sec:objects}. Chapter~\ref{sec:strategy} illustrates the
@@ -108,3 +117,30 @@ with the ATLAS detector are summarized in Chapter~\ref{sec:results},
 along with a comparison to other existing measurements at the LHC.
 Finally the summary of this thesis and an outlook is given in
 Chapter~\ref{sec:conclusion}.
+
+\subsubsection*{Personal contributions and acknowledgement}
+
+The results presented in this dissertation represent a small subset of
+the research carried out by the ATLAS Collaboration, comprised of over
+3000 scientists from 38 countries. These researchers are engaged in a
+variety of tasks, ensuring the successful operation of the experiment and
+the subsequent data analysis. The author actively contributed to the
+data--taking during 2011 and 2012 by developing and maintaining the
+jet trigger menu within the ATLAS Jet Trigger group. 
+The author's main focus, however, was the analyses illustrated in this
+dissertation, performed within the ATLAS Top group. Specifically, he
+designed and implemented the strategy and performed the necessary
+validation and optimization studies.
+A special acknowledgement goes to the former and present members of
+the IFAE--Top group for their fundamental contributions to the common
+analysis framework used for these analyses.
+The results based on data collected during 2011 have been published in
+the Journal of High Energy Physics~\cite{Aad:2013cea}, while the
+publication of the results based on the 2012 dataset is expected by
+the end of 2014.
+The author also studied the phenomenology of the \ttbar{} charge
+asymmetry in collaboration with theorists J.A. Aguilar--Saavedra and
+E. \'Alvarez, resulting in two publications in the Physics Letters
+B~\cite{AguilarSaavedra:2011cp} and the Journal of High Energy
+Physics~\cite{Aguilar-Saavedra:2014vta}.
+
