restore page number

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -38,7 +38,7 @@
 \setlength{\textheight}{23cm}
 \setlength{\textwidth}{16cm}
 
-\pagestyle{headings}
+%\pagestyle{headings}
 
 \newcommand{\dzero}      {D\O}
 \newcommand{\uubar}      {\ensuremath{u\bar{u}}}
